--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 /* CLASSES GENERALES */
 html,body {
     font-family:'Raleway', sans-serif;
+    max-width: 1440px;
+    margin-left: 20px;
 }
 
 .colorBlue {
@@ -244,29 +246,21 @@ i.fas {
 }
 
 .img1 {
-    background-image: url("./Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg");
     width: 100%;
     height: 120px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
 }
 
 .img2 {
-    background-image: url("./Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg");
     width: 100%;
     height: 120px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .img3 {
-    background-image: url("./Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg");
     width: 100%;
     height: 120px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
 }
 
@@ -363,4 +357,117 @@ i.fas {
 .detailsPopulaires {
     width: 60%;
     padding-left: 5%;
+}
+
+/* ACTIVITES */
+
+#Activités {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.blocActivités {
+    width: 100%;
+    height: 600px;
+}
+
+.blocActivités2356 {
+    width: 23%;
+    height: 600px;
+}
+
+.cubeActivités14 {
+    width: 23%;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px 1px #F2F2F2;
+}
+
+.cubeActivités2356 {
+    width: 100%;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px 1px #F2F2F2;
+}
+
+.imgActivités1 {
+    background-image: url("./Projet 2 - Reservia/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg");
+    width: 100%;
+    height: 530px;
+    background-size: cover;
+    background-position: center ;
+    border-radius: 15px 15px 0 0;
+}
+
+.imgActivités2 {
+    background-image: url("./Projet 2 - Reservia/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg");
+    width: 100%;
+    height: 250px;
+    background-size: cover;
+    background-position: center ;
+    border-radius: 15px 15px 0 0;
+}
+
+.imgActivités3 {
+    background-image: url("./Projet 2 - Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg");
+    width: 100%;
+    height: 150px;
+    background-size: cover;
+    background-position: center ;
+    border-radius: 15px 15px 0 0;
+}
+
+.imgActivités4 {
+    background-image: url("./Projet 2 - Reservia/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg");
+    width: 100%;
+    height: 530px;
+    background-size: cover;
+    background-position: center ;
+    border-radius: 15px 15px 0 0;
+}
+
+.imgActivités5 {
+    background-image: url("./Projet 2 - Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg");
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-position: center ;
+    border-radius: 15px 15px 0 0;
+}
+
+.imgActivités6 {
+    background-image: url("./Projet 2 - Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg");
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-position: center ;
+    border-radius: 15px 15px 0 0;
+}
+
+
+.titleActivités {
+    height: 70px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 5%;
+    width: 95%;
+}
+
+/* FOOTER */
+
+footer {
+    width: 100%;
+    margin: auto;
+    background-color: #F2F2F2;
+}
+
+#footerApropos {
+
+}
+
+#footerHebergements {
+
+}
+
+#footerAsssitance{
+
 }
