--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ html,body {
     margin-left: 20px;
 }
 
+.colorBlack {
+    color: black;
+}
+
 .colorBlue {
     color: #0065FC;
 }
@@ -33,6 +37,12 @@ html,body {
 .flexCenter {
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.flexCenterStar {
+    display: flex;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -249,6 +259,7 @@ i.fas {
     width: 100%;
     height: 120px;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .img2 {
@@ -262,33 +273,28 @@ i.fas {
     width: 100%;
     height: 120px;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .img4 {
-    background-image: url("./Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg");
     width: 100%;
     height: 120px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .img5 {
-    background-image: url("./Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg");
     width: 100%;
     height: 120px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .img6 {
-    background-image: url("./Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg");
     width: 100%;
     height: 120px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .blocsHébergement {
@@ -316,30 +322,24 @@ i.fas {
 }
 
 .imgPopulaires1 {
-    background-image: url("./Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg");
     width: 35%;
     height: 160px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 0 0 15px;
+    object-fit: cover;
 }
 
 .imgPopulaires2 {
-    background-image: url("./Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg");
     width: 35%;
     height: 160px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 0 0 15px;
+    object-fit: cover;
 }
 
 .imgPopulaires3 {
-    background-image: url("./Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg");
     width: 35%;
     height: 160px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 0 0 15px;
+    object-fit: cover;
 }
 
 .cubePopulaires {
@@ -389,57 +389,45 @@ i.fas {
 }
 
 .imgActivités1 {
-    background-image: url("./Projet 2 - Reservia/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg");
     width: 100%;
     height: 530px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .imgActivités2 {
-    background-image: url("./Projet 2 - Reservia/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg");
     width: 100%;
     height: 250px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .imgActivités3 {
-    background-image: url("./Projet 2 - Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg");
     width: 100%;
     height: 150px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .imgActivités4 {
-    background-image: url("./Projet 2 - Reservia/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg");
     width: 100%;
     height: 530px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .imgActivités5 {
-    background-image: url("./Projet 2 - Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg");
     width: 100%;
     height: 200px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 .imgActivités6 {
-    background-image: url("./Projet 2 - Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg");
     width: 100%;
     height: 200px;
-    background-size: cover;
-    background-position: center ;
     border-radius: 15px 15px 0 0;
+    object-fit: cover;
 }
 
 
